--- a/.github/workflows/Manual Build Docker Image.yml
+++ b/.github/workflows/Manual Build Docker Image.yml
@@ -43,5 +43,5 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
           tags: |
-            superng6/qbittorrent:${{ steps.set-version.outputs.version }}
-            superng6/qbittorrent:latest
+            gowinder/qbittorrent:${{ steps.set-version.outputs.version }}
+            gowinder/qbittorrent:latest
